force-app/main/default/objects/Time_Entry__c/Time_Entry__c.object-meta.xml
<CustomObject>
    <description>Allocation-eligible daily time entry with correction lineage.</description>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{00000}</displayFormat>
        <label>Time Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>