force-app/main/default/objects/Time_Entry__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Allocation</label>
    <referenceTo>Allocation__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>