force-app/main/default/objects/Time_Entry__c/fields/Correction_Parent__c.field-meta.xml
<CustomField>
    <fullName>Correction_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Correction Parent</label>
    <referenceTo>Time_Entry__c</referenceTo>
    <relationshipLabel>Corrections</relationshipLabel>
    <relationshipName>Corrections</relationshipName>
    <type>Lookup</type>
</CustomField>