force-app/main/default/objects/Time_Entry__c/fields/Correction_Reason__c.field-meta.xml
<CustomField><fullName>Correction_Reason__c</fullName><label>Correction Reason</label><length>1000</length><type>LongTextArea</type><visibleLines>3</visibleLines></CustomField>