force-app/main/default/objects/Time_Entry__c/fields/Entry_Key__c.field-meta.xml
<CustomField>
    <fullName>Entry_Key__c</fullName>
    <externalId>true</externalId>
    <label>Entry Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>