force-app/main/default/objects/Time_Entry__c/fields/Work_Unit__c.field-meta.xml
<CustomField>
    <fullName>Work_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Unit</label>
    <referenceTo>Work_Unit__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>