force-app/main/default/objects/Time_Entry__c/validationRules/Time_Entry_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_Entry_Hours</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Hours__c &lt;= 0, Hours__c &gt; 24)</errorConditionFormula>
    <errorMessage>Time entry hours must be greater than zero and no more than 24.</errorMessage>
</ValidationRule>